re PR c++/63904 (ICE when accessing array member of constexpr struct)

2014-11-27  Kai Tietz  <ktietz@redhat.com>

	PR c++/63904
	* constexpr.c (cxx_eval_vec_init_1): Avoid
	type-overflow issue.

From-SVN: r218123